fix dashboard in dark mode

--- a/css/includes/_global-variables.scss
+++ b/css/includes/_global-variables.scss
@@ -45,6 +45,7 @@
    --dark-mode-text: #{$dark-mode-text};
 
    // Form elements
+   --input-border: #{$input-border};
    --input-border-color: #{$input-border-color};
    --input-border-radius: #{$border-radius};
    --input-border-width: #{$input-border-width};
