--- a/css/standalone/dashboard.scss
+++ b/css/standalone/dashboard.scss
@@ -358,7 +358,7 @@ $break_tablet: 1400px;
          line-height: 14px;
 
          fieldset.filter {
-            border: 2px solid #f0f0f0;
+            border: 2px solid var(--input-border);
             border-radius: 4px;
             padding: 6px 12px 5px 12px;
             text-align: center;
@@ -407,8 +407,14 @@ $break_tablet: 1400px;
                   display: none;
                }
 
+               // remove dropdown buttons
+               & ~ .btn {
+                  display: none;
+               }
+
                .select2-selection.select2-selection--single {
                   border: none;
+                  background-color: transparent;
                }
 
                .select2-container {
